--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
     "helmet": "^8.0.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.9.5",
+    "resend": "^4.1.1",
     "zod": "^3.24.1"
   },
   "devDependencies": {
