--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,9 @@
   "main": "index.js",
   "scripts": {
     "dev": "ts-node-dev --files src/index.ts",
-    "seed": "ts-node-dev src/seeders/role.seeder.ts"
+    "seed-role": "ts-node-dev src/seeders/role.seeder.ts",
+    "seed-apartment": "ts-node-dev src/seeders/apartment.seeder.ts",
+    "seed": "npm run seed-role && npm run seed-apartment"
   },
   "keywords": [],
   "author": "",
